force-app/main/default/objects/Product2/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date for Product</description>
    <inlineHelpText>End Date for Product</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>