force-app/main/default/objects/Product2/fields/Needed_for_Ordering_Process__c.field-meta.xml
<CustomField>
    <fullName>Needed_for_Ordering_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needed for Ordering Process?</label>
    <type>Checkbox</type>
</CustomField>