force-app/main/default/objects/Product2/fields/Procedure_Description__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Description__c</fullName>
    <label>Procedure Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>