force-app/main/default/objects/Product2/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Theme</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Diversity</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Facts &amp; Donor Education</fullName>
            </value>
            <value>
                <fullName>Appointment Support</fullName>
            </value>
            <value>
                <fullName>Power Red</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Spanish Materials</fullName>
            </value>
            <value>
                <fullName>Rapid Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>