force-app/main/default/objects/Product2/fields/Product_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Short_Description__c</fullName>
    <label>Product Short Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>