force-app/main/default/objects/Product2/fields/Product_Yields__c.field-meta.xml
<CustomField>
    <fullName>Product_Yields__c</fullName>
    <label>Product Yields</label>
    <length>50</length>
    <type>Text</type>
</CustomField>