force-app/main/default/objects/Product2/validationRules/Restrict_Product_Access_for_Different_Us.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Product_Access_for_Different_Us</fullName>
    <active>true</active>
    <description>Restrict Product Access for Different Users,APS Admin,APS Management,APS Planner,APS Scheduler, Collection Management,Collections,DRD Manager,DRD Profile,Marketing User,Schedule Viewers,Skedulo,Solution Manager,Standard Platform User,Standard User,Telecru</description>
    <errorConditionFormula>AND(NOT(ISNEW()),AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Sponsor Marketing&quot;,$Profile.Name &lt;&gt;&quot;Promotional Manager&quot;,$Profile.Name &lt;&gt;&quot;Global Admin&quot;
))</errorConditionFormula>
    <errorMessage>You don&apos;t have the necessary access to edit the product</errorMessage>
</ValidationRule>